@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class Author{
    - id
    - name
    - shortBio
    + getName()
}

class AuthorController
{
    + getAuthorsByName(name)
}
class AuthorServiceImpl
{
    + getAuthorsByName(name)
}

class AuthorRepository
{
    + findAll()
}


AuthorController ..> AuthorServiceImpl
AuthorServiceImpl ..> AuthorRepository
AuthorController ..> Author
AuthorServiceImpl ..> Author
AuthorRepository "1" --> "1..*" Author: searches

@enduml